--- a/flask_redi/docker-compose.yml
+++ b/flask_redi/docker-compose.yml
@@ -2,11 +2,16 @@ version: '3.8'
 
 services:
   web:
+    environment:
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     build: .
     ports:
       - "5002:5002"
     depends_on:
       - redis
+    
+      
 
   redis:
     image: redis
