--- a/flask_redi/docker-compose.yml
+++ b/flask_redi/docker-compose.yml
@@ -1,18 +1,25 @@
 version: '3.8'
 
 services:
+  nginx:
+    image: nginx
+    ports:
+      - "5002:5002"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - redis
+
   web:
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
     build: .
-    ports:
-      - "5002:5002"
+
+
     depends_on:
       - redis
     
-      
-
   redis:
     image: redis
     volumes:
