updates to the conaitner names in yaml file

--- a/flask_redi/nginx.conf
+++ b/flask_redi/nginx.conf
@@ -2,9 +2,9 @@ events {}
 
 http {
     upstream flask_app {
-      server web_1:5002;
-      server web_2:5002;
-      server web_3:5002;
+        server flask_redi-web-1:5002;
+        server flask_redi-web-2:5002;
+        server flask_redi-web-3:5002;
     }
 
     server {
